<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/availability"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:backgroundTint="#20b2aa"
            android:text="@string/show_details"
            android:textSize="9dp" />
        <Button
            android:id="@+id/add2B"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:backgroundTint="#006400"
            android:text="@string/add"
            android:textSize="9dp" />





    </LinearLayout>
    <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_weight="1">

        <ImageView
            android:id="@+id/image"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:scaleType="fitXY" />
    </LinearLayout>


</LinearLayout>

