<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="2"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="274dp"
        android:layout_height="252dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageC"
            android:layout_width="123dp"
            android:layout_height="132dp"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priceC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/QuantityC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <ImageButton
        android:id="@+id/deleteProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="#B22222"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/quantitySpinner"
        app:layout_constraintStart_toEndOf="@+id/quantitySpinner"
        app:layout_constraintTop_toTopOf="@+id/quantitySpinner"
        app:srcCompat="@drawable/ic_baseline_delete_24" />


</LinearLayout>
